--- a/HW2/task1_flex.html
+++ b/HW2/task1_flex.html
@@ -2,45 +2,40 @@
 <style>
  * {
    margin: 1%;
-   box-sizing: border-box;
-   /* margin-bottom: 0px; */
-   overflow: auto;
+   margin-bottom: 0.5%;
 }
 .flex-container {
   display: flex;
   flex-direction: column;
-  background-color: grey;
+  /* background-color: grey; */
 }
 
-.flex-container>div.flex-line1 {
+.flex-container>div.flex-line {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-/* .flex-container>div.flex-line1>div {
- /*  background-color: #f1f1f1;
-  margin: 1px;
-  padding: 20px;
-  font-size: 30px; 
-   width: 49%;
-   height: 40px;
-   background-color: orange;
-} */
 </style>
 </head>
 <body>
 
 <div class="flex-container">
-  <div class="flex-line1">
+  <div class="flex-line">
     <div style="width: 50%;height: 40px; background-color: orange;"></div>
     <div style="width: 50%;height: 40px; background-color: orange;"></div>
   </div>
-  <div class="flex-line1">
+  <div class="flex-line">
     <div style="display:block; width: 100%; height: 120px; background-color: yellowgreen;"></div> 
   </div>
-  <div class="flex-line1">
+  <div class="flex-line">
     <div style="display:block; width: 33.3%; height: 80px; background-color: blue;"></div> 
     <div style="display:block; width: 33.3%; height: 80px; background-color: blue;"></div> 
     <div style="display:block; width: 33.3%; height: 80px; background-color: blue;"></div> 
   </div>  
-</div>
+  <div class="flex-line">
+      <div style="display:block; width: 25%; height: 80px; background-color: grey;"></div> 
+      <div style="display:block; width: 25%; height: 80px; background-color: grey;"></div> 
+      <div style="display:block; width: 25%; height: 80px; background-color: grey;"></div> 
+      <div style="display:block; width: 25%; height: 80px; background-color: grey;"></div> 
+    </div>  
+  </div>
