Signed-off-by: Yury Dalidovich <yury.dalidovich@LeverX.local>

--- a/HW2/task3.html
+++ b/HW2/task3.html
@@ -7,11 +7,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HW #2 Task 3</title>
     <link rel="stylesheet" href="./style3.css">
+    <style>
+
+    </style>
 </head>
 
 <body>
+    <header></header>
+    <section>
+        <nav>
+            <a href="./task1.1.html">Task 1(block)</a><br>
+            <a href="./task1.2.html">Task 1(table)</a><br>
+            <a href="./task1_flex.html">Task 1(2flex)</a><br>
+            <a href="./task2.html">Task 2</a>
+        </nav>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo modi quis, a quibusdam numquam
+                reprehenderit nam doloremque perferendis, mollitia rerum laudantium laboriosam repellendus expedita
+                inventore dolores laborum! Commodi, quaerat!</p>
+            <br>
+            <ol type="1">
+                <li>First</li>
+                <li>Second</li>
+                <li>Third</li>
+            </ol>
+        </article>
+    </section>
+    <footer></footer>
 
-    <div id="sidebar">
+    <!--     <div id="sidebar">
         <a href="./task1.1.html">Task 1(block)</a><br>
         <a href="./task1.2.html">Task 1(table)</a><br>
         <a href="./task1_flex.html">Task 1(2flex)</a><br>
@@ -34,7 +58,7 @@
             </ol>
         </div>
         <div id="footer"></div>
-    </div>
+    </div> -->
 
 </body>
 
