--- a/HW2/task4.html
+++ b/HW2/task4.html
@@ -10,31 +10,32 @@
  </head>
 
 <body>
-    <div id="page">
-        <div id="header">
-            <img src="./bricks.jpg" style="height: 80%">
-            <img src="./bricks.jpg" style="height: 80%">
+    <header>
+        <img src="./bricks.jpg" style="height: 50%">
+        <h2>Header</h2>
+        <img src="./bricks.jpg" style="height: 50%">
+    </header>
+    <article>
+        <div id="column" style="float:left;">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro illum sunt
+                facilis suscipit asperiores labore adipisci dignissimos accusamus minima beatae? Aliquam sit
+                cupiditate
+                debitis harum esse commodi repellat? Atque, cumque.</p>
         </div>
-        <div id="main">
-            <div id="column" style="float:left;">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro illum sunt
-                    facilis suscipit asperiores labore adipisci dignissimos accusamus minima beatae? Aliquam sit
-                    cupiditate
-                    debitis harum esse commodi repellat? Atque, cumque.</p>
-            </div>
-            <div id="column" style="float:right;">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro illum sunt
-                    facilis suscipit asperiores labore adipisci dignissimos accusamus minima beatae? Aliquam sit
-                    cupiditate
-                    debitis harum esse commodi repellat? Atque, cumque.</p>
-            </div>
+        <div id="column" style="float:right;">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro illum sunt
+                facilis suscipit asperiores labore adipisci dignissimos accusamus minima beatae? Aliquam sit
+                cupiditate
+                debitis harum esse commodi repellat? Atque, cumque.</p>
         </div>
-        <div id="footer">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi impedit quisquam, eaque possimus
-                quidem
-                autem pariatur, unde hic laudantium repellat! Nemo soluta id ex ipsum? Non, quo. Unde, nihil.</p>
-        </div>
-    </div>
+    </article>
+    <footer>
+        <h2 style="text-align: center">Footer</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi impedit quisquam, eaque possimus
+            quidem
+            autem pariatur, unde hic laudantium repellat! Nemo soluta id ex ipsum? Non, quo. Unde, nihil.</p>
+
+    </footer>
 </body>
 
 </html>
